--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -6,7 +6,7 @@ schema:
 dataSources:
   - kind: ethereum/contract
     name: Factory
-    network: matic
+    network: mainnet
     source:
       address: '0x8B9e9E48A1a0d216F0dF69475370850Be31Fed69'
       abi: Factory
@@ -34,7 +34,7 @@ dataSources:
 templates:
   - kind: ethereum/contract
     name: Pair
-    network: matic
+    network: mainnet
     source:
       abi: Pair
     mapping:
