--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "uniswap-v2-subgraph",
+  "name": "Subgraph",
   "version": "1.0.0",
-  "repository": "https://github.com/dhavalalite/safeswap-test-graph",
+  "repository": "https://github.com/yfdaifinance/Subgraph",
   "license": "GPL-3.0-or-later",
   "scripts": {
     "codegen": "graph codegen --output-dir src/types/",
     "build": "graph build",
     "create-local": "graph create davekaj/uniswap --node http://127.0.0.1:8020",
     "deploy-local": "graph deploy davekaj/uniswap --debug --ipfs http://localhost:5001 --node http://127.0.0.1:8020",
-    "deploy": "graph deploy yfdaifinance/Safeswap --access-token e5b0c9c9ade84afdb3bbddc9adc9af0c --ipfs https://api.thegraph.com/ipfs/ --node https://api.thegraph.com/deploy/ --debug",
+    "deploy": "graph deploy yfdaifinance/safeswap-eth-t1 --access-token b4b9c85a15957c3fc053ee68053e6d0d --ipfs https://api.thegraph.com/ipfs/ --node https://api.thegraph.com/deploy/ --debug",
     "deploy-staging": "graph deploy $THE_GRAPH_GITHUB_USER/$THE_GRAPH_SUBGRAPH_NAME /Uniswap --ipfs https://api.staging.thegraph.com/ipfs/ --node https://api.staging.thegraph.com/deploy/",
     "watch-local": "graph deploy graphprotocol/Uniswap2 --watch --debug --node http://127.0.0.1:8020/ --ipfs http://localhost:5001"
   },
